LAB_FILES/pod2c_k8sdemo.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: k8s-demo
  name: k8s-demo
spec:
  containers:
  - image: mjbright/k8s-demo:1
    name: k8s-demo
    resources: {}
  - image: mjbright/k8s-demo:alpine1
    name: sidecar
    command: ['/bin/sh']
    args: ['-c', 'while true; do date; sleep 1; done']
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
